<resources>
    <string name="app_name">SENATI 2025</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_apellido">Apellido:</string>
    <string name="hint_dni">DNI:</string>
    <string name="hint_carrera">Carrera:</string>
    <string name="hint_ciclo">Ciclo:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_correo_electronico">Correo Electronico:</string>
    <string name="hint_direccion">Direccion:</string>
    <string name="hint_seccion">Seccion:</string>
    <string name="hint_fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="btn_guardar">Guardar Registro</string>
    <string name="menu_nuevo">Nuevo Registro</string>
</resources>